# daily-ai-insight-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py
backend/app/agents/: __init__.py  daily_analysis_agent.py  daily_narrative_agent.py  event_extraction_agent.py  insight_analysis_agent.py  risk_assessment_agent.py
backend/app/api/: __init__.py  main.py
backend/app/collectors/: __init__.py  arxiv.py  base.py  github.py  github_releases.py  hacker_news.py  reddit.py  registry.py  rss.py  schema.py  utils.py
backend/app/core/: config.py  http.py
backend/app/pipelines/: __init__.py  collection.py  collection_orchestrator.py
backend/app/rag/: __init__.py  chunker.py  chunking.py
backend/app/reports/: __init__.py  daily_report_generator.py
backend/app/schemas/: __init__.py  analysis.py  daily_analysis.py  daily_article.py  source.py  sources.py
backend/app/services/: __init__.py  dedup.py  deduplication.py  event_clustering.py  relevance.py
backend/app/storage/: __init__.py  analysis_store.py  models.py  sqlite_analysis_store.py  sqlite_store.py
configs/: sources.yaml
docs/: data-source-implementation.md  overall-architecture.md  remaining-architecture-implementation-plan.md  system-design-and-data-flow-cn.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
tests/: test_analysis_storage.py  test_api.py  test_daily_analysis.py  test_daily_article.py  test_data_source_pipeline.py  test_storage_and_rag.py
tests/fixtures/: raw_source_items.json
